# PolyMarketScan

./: .gitignore  daily_data_collector.py  debug_markets.py  debug_specific_market.py  explore_market_data.py  fetch_historical_markets.py  fetch_july23_market.py  pyproject.toml  scrape_chart_data.py
polymarket_analysis/: __init__.py
polymarket_analysis/analysis/: __init__.py
polymarket_analysis/data/: __init__.py  bitcoin_client.py  polymarket_client.py
polymarket_analysis/utils/: __init__.py
scripts/: daily_collector.py  fetch_data.py  scrape_market_data.py
